added date display to status-right.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,4 +35,8 @@ bind-key p paste-buffer
 # status bar
 #############################
 set -g status-position top
+set-option -g status-interval 1
+set-option -g status-utf8 on 
+
+set-option -g status-right "%Y/%m/%d(%a) %H:%M:%S"
 # set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],[]} #H[#S] #[default]'
