change prefix key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@
 # Prefix + - : split-window vertical
 #############################
 # change prefix key
-set -g prefix C-a
+set -g prefix C-s
 # mouse control enabled
 set-option -g mouse on
 # vi keybind
