Add reattach-to-user-namespace for OSX Sierra

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,7 @@ bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key | split-window -h 
 bind-key - split-window -v
 
+
 #############################
 # copy-mode usage
 # ---------------------------
@@ -31,6 +32,7 @@ bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
 bind-key -t vi-copy y     copy-pipe "cat > /dev/clipboard"
 bind-key p paste-buffer
 
+
 #############################
 # status bar
 #############################
@@ -39,3 +41,14 @@ set-option -g status-interval 1
 
 set-option -g status-right "%Y/%m/%d(%a) %H:%M:%S"
 # set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],[]} #H[#S] #[default]'
+
+
+#############################
+# pbcopy wrapper for OSX Sierra
+# ---------------------------
+# @see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+# 1. brew install reattach-to-user-namespace
+# 2. tmux kill-server
+#############################
+set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
+
