--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,17 +19,26 @@ bind-key - split-window -v
 
 
 #############################
+# pbcopy wrapper for OSX Sierra
+# ---------------------------
+# @see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+# 1. brew install reattach-to-user-namespace
+# 2. tmux kill-server
+#############################
+set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
+
+
+#############################
 # copy-mode usage
 # ---------------------------
-# 1. to copy-mode
-# 2. move to target line
-# 3. begin selection with Space key
+# 1. `tmux + [` to selection mode
+# 2. begin selection with `y` or `space` key
+# 3. clipboard with `y' or `enter` key
 # Its also possible on Ctrl + V as its also stored on the clipboard.
 #############################
-bind-key v copy-mode \; display "Copy mode!"
-#bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
-bind-key -t vi-copy y     copy-pipe "cat > /dev/clipboard"
+bind-key -T copy-mode-vi v     send-keys -X begin-selection
+bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key p paste-buffer
 
 
