Fix duplicate settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,14 @@
 #############################
 # keybindings
 # ---------------------------
-# Ctrl + a   : Prefix
+# Ctrl + s   : Prefix
 # Prefix + r : reload .tmux.conf
 # Prefix + | : split-window horizontal
 # Prefix + - : split-window vertical
 #############################
 # change prefix key
-set -g prefix C-s
+set-option -g prefix C-s
+
 # mouse control enabled
 set-option -g mouse on
 # vi keybind
@@ -28,6 +29,7 @@ bind-key - split-window -v
 set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 
+
 #############################
 # copy-mode usage
 # ---------------------------
@@ -36,28 +38,29 @@ set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reat
 # 3. clipboard with `y' or `enter` key
 # Its also possible on Ctrl + V as its also stored on the clipboard.
 #############################
-bind-key -T copy-mode-vi v     send-keys -X begin-selection
-bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# for tmux 2.4 or higher
+if-shell "[[ `tmux -V` == '2.4' ]]" \
+	bind-key -T copy-mode-vi v     send-keys -X begin-selection \
+	bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \
+	bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
 bind-key p paste-buffer
+
 
 
 #############################
 # status bar
-#############################
-set -g status-position top
-set-option -g status-interval 1
-
-set-option -g status-right "%Y/%m/%d(%a) %H:%M:%S"
-# set-option -g status-left '#[fg=cyan,bg=#303030]#{?client_prefix,#[reverse],[]} #H[#S] #[default]'
-
-
-#############################
-# pbcopy wrapper for OSX Sierra
 # ---------------------------
-# @see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-# 1. brew install reattach-to-user-namespace
-# 2. tmux kill-server
+# @see https://github.com/erikw/tmux-powerline
 #############################
-set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
+set-option -g status-position top
+set-option -g status-interval 1
+set-option -g status-utf8 on
+
+set-option -g status-bg colour27
+set-option -g status-fg colour246
+
+set-option -g status-left "#[fg=colour246,bg=colour27]#[default]"
+set-option -g status-right "#[fg=colour246,bg=colour27] | %Y/%m/%d(%a) %H:%M:%S"
+
 
