--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+
 #############################
 # keybindings
 # ---------------------------
@@ -39,13 +41,11 @@ set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reat
 # Its also possible on Ctrl + V as its also stored on the clipboard.
 #############################
 # for tmux 2.4 or higher
-if-shell "[[ `tmux -V` == '2.4' ]]" \
-	bind-key -T copy-mode-vi v     send-keys -X begin-selection \
-	bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \
-	bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+if-shell "[[ $TMUX_VERSION >= 2.4 ]]" 'bind-key -T copy-mode-vi v     send -X begin-selection'
+if-shell "[[ $TMUX_VERSION >= 2.4 ]]" 'bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
+if-shell "[[ $TMUX_VERSION >= 2.4 ]]" 'bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
 
 bind-key p paste-buffer
-
 
 
 #############################
