--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,6 @@ bind-key - split-window -v
 set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 
-
 #############################
 # copy-mode usage
 # ---------------------------
@@ -40,12 +39,33 @@ set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reat
 # 3. clipboard with `y' or `enter` key
 # Its also possible on Ctrl + V as its also stored on the clipboard.
 #############################
-# for tmux 2.4 or higher
-if-shell "[[ $TMUX_VERSION >= 2.4 ]]" 'bind-key -T copy-mode-vi v     send -X begin-selection'
-if-shell "[[ $TMUX_VERSION >= 2.4 ]]" 'bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
-if-shell "[[ $TMUX_VERSION >= 2.4 ]]" 'bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
-
 bind-key p paste-buffer
+
+# for tmux 2.3 or less
+if-shell '[[ $TMUX_VERSION <= 2.3 ]]' \;
+	# for Cygwin
+	if-shell '[[ -e /dev/clipboard ]]' \;
+		bind-key -t vi-copy v     begin-selection \;
+		bind-key -t vi-copy y     copy-pipe "cat > /dev/clipboard" \;
+		bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
+	# for OSX
+	if-shell 'which reattach-to-user-namespace' \;
+		bind-key -T vi-copy y     begin-selection \;
+		bind-key -T vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy" \;
+		bind-key -T vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# for tmux 2.4 or higher
+if-shell '[[ $TMUX_VERSION >= 2.4 ]]' \;
+	# for Cygwin
+	if-shell '[[ -e /dev/clipboard ]]' \;
+		bind-key -t copy-mode-vi v     send -X begin-selection \;
+		bind-key -t copy-mode-vi y     send -X copy-pipe-and-cancel "cat > /dev/clipboard" \;
+		bind-key -t copy-mode-vi Enter send -X copy-pipe-and-cancel "cat > /dev/clipboard"
+	# for OSX
+	if-shell 'which reattach-to-user-namespace' \;
+		bind-key -T copy-mode-vi v     send -X begin-selection \;
+		bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \;
+		bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 
 #############################
