.tmux.conf for cygwin and osx

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,56 +16,10 @@ set-option -g mouse on
 # vi keybind
 set-window-option -g mode-keys vi
 
+bind-key p paste-buffer
 bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
 bind-key | split-window -h 
 bind-key - split-window -v
-
-
-#############################
-# pbcopy wrapper for OSX Sierra
-# ---------------------------
-# @see https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-# 1. brew install reattach-to-user-namespace
-# 2. tmux kill-server
-#############################
-set -g default-command "which reattach-to-user-namespace >/dev/null 2>&1 && reattach-to-user-namespace -l $SHELL || $SHELL"
-
-
-#############################
-# copy-mode usage
-# ---------------------------
-# 1. `tmux + [` to selection mode
-# 2. begin selection with `y` or `space` key
-# 3. clipboard with `y' or `enter` key
-# Its also possible on Ctrl + V as its also stored on the clipboard.
-#############################
-bind-key p paste-buffer
-
-# for tmux 2.3 or less
-if-shell '[[ $TMUX_VERSION <= 2.3 ]]' \;
-	# for Cygwin
-	if-shell '[[ -e /dev/clipboard ]]' \;
-		bind-key -t vi-copy v     begin-selection \;
-		bind-key -t vi-copy y     copy-pipe "cat > /dev/clipboard" \;
-		bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
-	# for OSX
-	if-shell 'which reattach-to-user-namespace' \;
-		bind-key -T vi-copy y     begin-selection \;
-		bind-key -T vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy" \;
-		bind-key -T vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# for tmux 2.4 or higher
-if-shell '[[ $TMUX_VERSION >= 2.4 ]]' \;
-	# for Cygwin
-	if-shell '[[ -e /dev/clipboard ]]' \;
-		bind-key -t copy-mode-vi v     send -X begin-selection \;
-		bind-key -t copy-mode-vi y     send -X copy-pipe-and-cancel "cat > /dev/clipboard" \;
-		bind-key -t copy-mode-vi Enter send -X copy-pipe-and-cancel "cat > /dev/clipboard"
-	# for OSX
-	if-shell 'which reattach-to-user-namespace' \;
-		bind-key -T copy-mode-vi v     send -X begin-selection \;
-		bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \;
-		bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 
 #############################
@@ -83,3 +37,8 @@ set-option -g status-left "#[fg=colour255,bg=colour27]#[default]"
 set-option -g status-right "#[fg=colour255,bg=colour27] | %Y/%m/%d(%a) %H:%M:%S"
 
 
+#############################
+# OS specific settings
+#############################
+if-shell 'uname | grep -q CYGWIN' 'source-file .tmux.conf.cygwin'
+if-shell 'uname | grep -q Darwin' 'source-file .tmux.conf.osx'
