--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 
+set-option -g default-command $SHELL
+
+
 #############################
 # keybindings
 # ---------------------------
@@ -24,8 +27,6 @@ bind-key - split-window -v
 
 #############################
 # status bar
-# ---------------------------
-# @see https://github.com/erikw/tmux-powerline
 #############################
 set-option -g status-position top
 set-option -g status-interval 1
@@ -42,3 +43,10 @@ set-option -g status-right "#[fg=colour255,bg=colour27] | %Y/%m/%d(%a) %H:%M:%S"
 #############################
 if-shell 'uname | grep -q CYGWIN' 'source-file .tmux.conf.cygwin'
 if-shell 'uname | grep -q Darwin' 'source-file .tmux.conf.osx'
+# for tmux 2.3 or less
+#if-shell "[[ $TMUX_VERSION <= 2.3 ]]" '\
+	bind-key -t vi-copy v     begin-selection;\
+	bind-key -t vi-copy y     copy-pipe "cat > /dev/clipboard";\
+	bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard";\
+'
+
