Fix CRLF to LF and space

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,9 +44,6 @@ set-option -g status-right "#[fg=colour255,bg=colour27] | %Y/%m/%d(%a) %H:%M:%S"
 if-shell 'uname | grep -q CYGWIN' 'source-file .tmux.conf.cygwin'
 if-shell 'uname | grep -q Darwin' 'source-file .tmux.conf.osx'
 # for tmux 2.3 or less
-#if-shell "[[ $TMUX_VERSION <= 2.3 ]]" '\
-	bind-key -t vi-copy v     begin-selection;\
-	bind-key -t vi-copy y     copy-pipe "cat > /dev/clipboard";\
-	bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard";\
-'
-
+#bind-key -t vi-copy v     begin-selection
+#bind-key -t vi-copy y     copy-pipe "cat > /dev/clipboard"
+#bind-key -t vi-copy Enter copy-pipe "cat > /dev/clipboard"
