--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,9 @@ set-window-option -g mode-keys vi
 
 bind-key p paste-buffer
 bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
-bind-key | split-window -h 
-bind-key - split-window -v
+bind-key c new-window -c "#{pane_current_path}"
+bind-key | split-window -hc "#{pane_current_path}"
+bind-key - split-window -vc "#{pane_current_path}"
 
 
 #############################
